@@ -10,5 +10,6 @@ Thanks for contributions:
 - Buck1000 for the trimesh converter (from Irrlicht Forum)
 - Cobra for the "shooting" object source (from Irrlicht Forum)
 - Going for the soft body help (from Bullet Forum)
+- Serengeor for the code::blocks project (from Irrlicht Forum)
 
 IF YOU ARE USING A BULLET VERSION > 2.76 PLEASE READ THE DOCUMENTATION TIP.
