@@ -1,3 +1,8 @@
+r33:
++ Fixed mesh->clear() function missing bug. The function was only implemented in SVN Versions of irrlicht
++ Fixed header include folder, to cleanly compile irrBP on other platforms (thanks to serengeor).
++ Added Code::Blocks Project File (thanks to serengeor).
+
 r32:
 + Minor documentation bugfix.
 
